--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,6 +17,23 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint
-    - name: Test with pytest
-      run: |
-        pylint `ls -R|grep .py$|xargs`
+    - name: Python Code Quality and Lint
+      # You may pin to the exact commit or the version.
+      # uses: ricardochaves/python-lint@32032eca67291cd71f88d79e61bc4b904ee03265
+      uses: ricardochaves/python-lint@v1.3.0
+      with:
+        # A list of all paths to test
+        python-root-list: . # optional, default is .
+        # Use Pylint
+        use-pylint: true # optional, default is true
+        # Use pycodestyle
+        use-pycodestyle: true # optional, default is true
+        # Use Flake8
+        use-flake8: true # optional, default is true
+        # Use Black
+        use-black: false # optional, default is true
+        # Use mypy
+        use-mypy: false # optional, default is true
+        # Use isort
+        use-isort: false # optional, default is true
+        # Extra options: pylint $(extra-pylint-options) $(python-root-list)
